--- a/canvas/Demo/02-16.会动的小人.html
+++ b/canvas/Demo/02-16.会动的小人.html
@@ -10,22 +10,33 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" ></script>
 <script>
 var canvas=document.querySelector('#demo');
-canvas.width=800;
-canvas.height=800;
-
+canvas.width=600;
+canvas.height=600;
+canvas.style.border="1px solid #000000";
 var demo=canvas.getContext('2d');
+
+var cenX=canvas.width/2;
+var cenY=canvas.height/2;
 
 //得到图片
     var img=new Image();
-    img.src='../img/1.png';
-    var width=img.width/4;
-    var height=img.height/4;
 
-    setInterval(
-        function () {
-            demo.drawImage(img,)
-        }
-    )
+    img.src='../img/1.png';
+    img.onload=function () {
+
+        var statX=0;
+        var speed=5;
+        var width=img.width/4;
+        var height=img.height/4;
+        setInterval(
+            function () {
+                demo.clearRect(0,0,canvas.width,canvas.height);
+                demo.drawImage(img,statX*width,0,width,height,251,251,width,height);
+                statX++;
+                statX %=4;//stateX=statX %4;
+            },1000/speed
+        );
+    }
 </script>
 </body>
 </html>
