--- a/canvas/konva/1.5wedge.html
+++ b/canvas/konva/1.5wedge.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <script src="https://cdn.rawgit.com/konvajs/konva/2.1.2/konva.min.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div id="container"></div>
+<script>
+    var width=window.innerWidth;
+    var height=window.innerHeight;
+    //create a stage
+    var stage=new Konva.Stage({
+        container:'container',
+        width:width,
+        height:height
+    })
+    //create a layer
+    var layer=new Konva.Layer();
+    //create a wedge
+    var wedge=new Konva.Wedge({
+        x:stage.getWidth()/2,
+        y:stage.getHeight()/2,
+        radius:70,
+        angle:60,
+        fill:'red',
+        stroke:'black',
+        strokeWidth:4,
+        rotate:-120
+    });
+
+    layer.add(wedge);
+    stage.add(layer);
+</script>
 </body>
 </html>
